# Flight-Controller

./: CMakeLists.txt  LICENSE  README.md
RP2040/I2Cdev/: I2Cdev.cpp
RP2040/MPU6050/: MPU6050.cpp  MPU6050_6Axis_MotionApps_V6_12.h
include/: I2Cdev.h  MPU6050.h  helper_3dmath.h  pindef.h
src/: flight_controller.cpp
